Use valueOf method instead of constructor since valueOf is likely to yield significantly better space and time performance by caching frequently requested values.